<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:wheel="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="#FBFCFC"
    >

    <ImageView
        android:id="@+id/login_picture"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="100dp"
        android:background="@drawable/login_pic_image"
        android:contentDescription="@string/app_name"
        android:src="@mipmap/ic_launcher"/>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/tl_name"
        android:layout_below="@+id/login_picture"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/et_login_name"
            android:drawablePadding="@dimen/middle_space"
            android:drawableLeft="@drawable/username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/username" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/tl_pwd"
        android:layout_below="@+id/tl_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/et_login_pwd"
            android:drawablePadding="@dimen/middle_space"
            android:drawableLeft="@drawable/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:hint="@string/password" />
    </android.support.design.widget.TextInputLayout>

   <Button
        android:layout_below="@+id/tl_pwd"
        android:id="@+id/btn_login"
        android:background="@drawable/btn_login_background"
        android:textSize="@dimen/normal_textSize"
        android:textColor="@color/white"
        android:text="@string/login"
        android:layout_margin="@dimen/middle_space"
        android:padding="@dimen/middle_space"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</RelativeLayout>
