<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center_vertical"
    android:background="@color/viewfinder_frame"
    android:orientation="horizontal" >

    <TextView
        android:id="@+id/tab1_text"
        android:layout_width="0dp"
        android:layout_weight="1.0"
        android:layout_marginLeft="20dp"
        android:gravity="center_vertical"
        android:drawableLeft="@drawable/realm"
        android:layout_height="@dimen/tab_height"
        android:textColor="@color/orange"
        style="@style/Style.ActionBarTabTextStyle"
        android:text="@string/fragment_real" />

    <TextView
        android:id="@+id/tab2_text"
        style="@style/Style.ActionBarTabTextStyle"
        android:layout_width="0dp"
        android:layout_height="@dimen/tab_height"
        android:layout_weight="1.0"
        android:layout_marginLeft="20dp"
        android:drawableLeft="@drawable/site"
        android:gravity="center_vertical"
        android:text="@string/fragment_site" />

    <TextView
        android:id="@+id/tab3_text"
        android:layout_width="0dp"
        android:layout_height="@dimen/tab_height"
        android:layout_weight="1.0"
        android:layout_marginLeft="20dp"
        android:gravity="center_vertical"
        android:drawableLeft="@drawable/rang"
        style="@style/Style.ActionBarTabTextStyle"
        android:text="@string/fragment_rang" />

</LinearLayout>